--- a/pages/discography/otomodachi.html
+++ b/pages/discography/otomodachi.html
@@ -6,12 +6,57 @@
     <h1 class="glitch-text">
         おともだち
     </h1>
+    <p>2024.06.26</p>
+    <p>作詞・作曲・編曲：小春（チャラン・ポ・ランタン）</p>
+
 </div>
 
+<div class="contents_block">
+    <div class="yt-container">
+        <a class="yt-music-data" href="https://music.youtube.com/watch?v=ElWhuHTkbik"></a>
+    </div>
+</div>
 
 <div class="contents_block">
     <h3 class="glitch-text">Music Video</h3>
-    <div class="yt-video-container">
-        <a class="yt-video-data" href="https://youtu.be/ElWhuHTkbik"></a>
+    <div class="yt-container">
+        <a class="yt-video-data" href="https://youtu.be/jMsbCJ6NFS0?si=YtzFWUlTlgxBHbGt"></a>
+    </div>
+</div>
+
+<div class="contents_block">
+    <h3 class="glitch-text">Live Video</h3>
+    <div class="yt-container">
+        <a class="yt-video-data" href="https://youtu.be/aNxf4F76vNc?si=KyjpSyVubl-GcClv"></a>
+    </div>
+</div>
+
+<div class="contents_block">
+    <h3 class="glitch-text">Shorts</h3>
+    <div class="yt-flex-wrapper">
+        <div class="yt-flex-container yt-container">
+            <a class="yt-shorts-data" href="https://www.youtube.com/shorts/oN0AbYYfbTc"></a>
+        </div>
+        <div class="yt-flex-container yt-container">
+            <a class="yt-shorts-data" href="https://www.youtube.com/shorts/AN-eBByLzBU"></a>
+        </div>
+        <div class="yt-flex-container yt-container">
+            <a class="yt-shorts-data" href="https://www.youtube.com/shorts/gAQR28yhNck"></a>
+        </div>
+        <div class="yt-flex-container yt-container">
+            <a class="yt-shorts-data" href="https://www.youtube.com/shorts/MEYFF-AB35U"></a>
+        </div>
+        <div class="yt-flex-container yt-container">
+            <a class="yt-shorts-data" href="https://www.youtube.com/shorts/OPFM2XTsmeE"></a>
+        </div>
+        <div class="yt-flex-container yt-container">
+            <a class="yt-shorts-data" href="https://www.youtube.com/shorts/dyuXOKDUKC8"></a>
+        </div>
+        <div class="yt-flex-container yt-container">
+            <a class="yt-shorts-data" href="https://www.youtube.com/shorts/DqDWULgL9uc"></a>
+        </div>
+        <div class="yt-flex-container yt-container">
+            <a class="yt-shorts-data" href="https://www.youtube.com/shorts/kk7A_hJIYZw"></a>
+        </div>
     </div>
 </div>
