--- a/pages/discography/otomodachi.html
+++ b/pages/discography/otomodachi.html
@@ -60,3 +60,28 @@
         </div>
     </div>
 </div>
+
+<div class="contents_block">
+    <h3 class="glitch-text">Fancam</h3>
+    <div class="yt-container">
+        <a class="yt-video-data" href="https://youtu.be/R-ob4dKO8Oo?si=corYU1nOb95W9W2x"></a>
+    </div>
+    <div class="yt-container">
+        <a class="yt-video-data" href="https://youtu.be/xTKK4Amseew?si=V96Igj0k17cmE_ZP"></a>
+    </div>
+    <div class="yt-container">
+        <a class="yt-video-data" href="https://youtu.be/xb_t3jlEZtY?si=CfMgtoUZyZcpNQNB"></a>
+    </div>
+    <div class="yt-container">
+        <a class="yt-video-data" href="https://youtu.be/B4BoZ556gik?si=GmJ_kPYRLAu3V_qt"></a>
+    </div>
+    <div class="yt-container">
+        <a class="yt-video-data" href="https://youtu.be/hg_wFUQjyqE?si=GkxJECXEapD9R9Bv"></a>
+    </div>
+    <div class="yt-container">
+        <a class="yt-video-data" href="https://youtu.be/dbqbsHL53TY?si=aZoILyhnAfTtIgSn"></a>
+    </div>
+    <div class="yt-container">
+        <a class="yt-video-data" href="https://youtu.be/Cn9-aWL7Ogw?si=63Y5B1IgIkTU2PV9"></a>
+    </div>
+</div>
