--- a/pages/play/haine-test-2.html
+++ b/pages/play/haine-test-2.html
@@ -15,7 +15,7 @@
 
 <div class="contents_block">
     <p>
-        🥀🦋翼🥀🦋 です！「ハイネ共通テスト」を作りました！是非是非挑戦してみてね‼️あなたのシータ力が試されるかも？？
+        ·̩͙꒰ঌ翼໒꒱·̩͙🥀🦋 です！「ハイネ共通テスト」を作りました！是非是非挑戦してみてね‼️あなたのシータ力が試されるかも？？
     </p>
     <p>解答後は <b><a
                 href="https://x.com/search?q=%23%E7%AC%AC%EF%BC%92%E5%9B%9E%E3%83%8F%E3%82%A4%E3%83%8D%E5%85%B1%E9%80%9A%E3%83%86%E3%82%B9%E3%83%88&src=typed_query&f=live">#第２回ハイネ共通テスト</a></b>
