add haine-test-2 comment

--- a/pages/play/haine-test-2.html
+++ b/pages/play/haine-test-2.html
@@ -29,29 +29,29 @@
     <hr>
 
     <p>問1：·̩͙꒰ঌ翼໒꒱·̩͙🥀🦋 <a href="https://x.com/wing_haine">@wing_haine</a></p>
-    <p class="indent-lv1">『コメントコメントコメント』</p>
+    <p class="indent-lv1">『あなたもシータのトリコ🦋』</p>
     <br>
 
     <p>問2：ん@ハイネ <a href="https://x.com/haine_n_Ado">@haine_n_Ado</a></p>
-    <p class="indent-lv1">『コメントコメントコメント』</p>
+    <p class="indent-lv1">『前回に引き続き、作問させて頂きました🦋多分1番簡単です。ハイネの皆さん、お手柔らかにお願いします』</p>
     <br>
 
     <p>問3：ただのオタク@もなちゃん推しのハイネ <a href="https://x.com/otaku_dayonw">@otaku_dayonw</a></p>
-    <p class="indent-lv1">『コメントコメントコメント』</p>
+    <p class="indent-lv1">『もなちゃんの事が大好きなみなさんなら余裕ですよね？』</p>
     <br>
 
     <p>問4：あっきー <a href="https://x.com/akky_haine">@akky_haine</a></p>
-    <p class="indent-lv1">『コメントコメントコメント』</p>
+    <p class="indent-lv1">『答えられなくても大丈夫🤍一生かけて知っていこうﾈ...🩸』</p>
     <br>
 
     <p>問5：ミズメ🦋🍪🐷 <a href="https://x.com/MADARAMIZUMEIGA">@MADARAMIZUMEIGA</a></p>
-    <p class="indent-lv1">『コメントコメントコメント』</p>
+    <p class="indent-lv1">『隠れマイペースは隠れてない定期』</p>
     <br>
 
     <p>問6：音/おとち ♣︎ 🩵 <a href="https://x.com/haineOTO
 ">@haineOTO
         </a></p>
-    <p class="indent-lv1">『コメントコメントコメント』</p>
+    <p class="indent-lv1">『あなたの百花愛を試させてください🩵』</p>
     <br>
 
     <p>
