upfate haine-test-2 photo

--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -61,43 +61,46 @@
     <h3 class="glitch-text">公式リンク</h3>
     <ul id="official-link" class="official-link">
         <li>
-            <a class="official-a" href="https://phantomsiita.com/" target="_blank" rel="noreferrer">
+            <a class="official-a" href="https://phantomsiita.com/?ref=mothlamp.info" target="_blank" rel="noreferrer">
                 <svg role="img" aria-label="リボン">
                     <use href="#ribbon"></use>
                 </svg>ホームページ</a>
         </li>
         <li>
-            <a class="official-a" href="https://bonanza-base.com/shop/phantomsiita" target="_blank" rel="noreferrer">
+            <a class="official-a" href="https://bonanza-base.com/shop/phantomsiita?ref=mothlamp.info" target="_blank"
+                rel="noreferrer">
                 <svg role="img" aria-label="リボン">
                     <use href="#ribbon"></use>
                 </svg>Official Shop</a>
         </li>
         <li>
-            <a class="official-a" href="https://x.com/PhantomSiita" target="_blank">
+            <a class="official-a" href="https://x.com/PhantomSiita?ref=mothlamp.info" target="_blank">
                 <svg role="img" aria-label="リボン">
                     <use href="#ribbon"></use>
                 </svg>X(Twitter)</a>
         </li>
         <li>
-            <a class="official-a" href="https://www.instagram.com/phantom_siita_official" target="_blank">
+            <a class="official-a" href="https://www.instagram.com/phantom_siita_official?ref=mothlamp.info"
+                target="_blank">
                 <svg role="img" aria-label="リボン">
                     <use href="#ribbon"></use>
                 </svg>Instagram</a>
         </li>
         <li>
-            <a class="official-a" href="https://www.youtube.com/@PhantomSiita" target="_blank">
+            <a class="official-a" href="https://www.youtube.com/@PhantomSiita?ref=mothlamp.info" target="_blank">
                 <svg role="img" aria-label="リボン">
                     <use href="#ribbon"></use>
                 </svg>YouTube</a>
         </li>
         <li>
-            <a class="official-a" href="https://www.tiktok.com/@phantom_siita_official" target="_blank">
+            <a class="official-a" href="https://www.tiktok.com/@phantom_siita_official?ref=mothlamp.info"
+                target="_blank">
                 <svg role="img" aria-label="リボン">
                     <use href="#ribbon"></use>
                 </svg>TikTok</a>
         </li>
         <li>
-            <a class="official-a" href="https://piapro.jp/PhantomSiita" target="_blank">
+            <a class="official-a" href="https://piapro.jp/PhantomSiita?ref=mothlamp.info" target="_blank">
                 <svg role="img" aria-label="リボン">
                     <use href="#ribbon"></use>
                 </svg>piapro</a>
@@ -106,142 +109,43 @@
 
     <hr>
 
-    <ul class="official-link mona-link">
-        <li>
-            <a class="official-a" href="https://lit.link/psmona" target="_blank">
+    <ul class="official-link">
+        <li class="mona-link">
+            <a class="official-a" href="https://lit.link/psmona?ref=mothlamp.info" target="_blank">
                 <svg role="img" aria-label="蝶々">
                     <use href="#butterfly"></use>
                 </svg>もな</a>
         </li>
-        <li>
-            <a class="official-a" href="https://x.com/ps_mona0917" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>X(Twitter)</a>
-        </li>
-        <li>
-            <a class="official-a" href="https://www.instagram.com/ps_mona0917" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>Instagram</a>
-        </li>
-        <li>
-            <a class="official-a" href="https://www.tiktok.com/@ps_mona0917" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>TikTok</a>
-        </li>
-    </ul>
-
-    <ul class="official-link miu-link" style="padding-top: 0;">
-        <li>
-            <a class="official-a" href="https://lit.link/psmiu" target="_blank">
+        <li class="miu-link">
+            <a class="official-a" href="https://lit.link/psmiu?ref=mothlamp.info" target="_blank">
                 <svg role="img" aria-label="蝶々">
                     <use href="#butterfly"></use>
                 </svg>美雨</a>
         </li>
-        <li>
-            <a class="official-a" href="https://x.com/ps_miu1117" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>X(Twitter)</a>
-        </li>
-        <li>
-            <a class="official-a" href="https://www.instagram.com/ps_miu1117" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>Instagram</a>
-        </li>
-        <li>
-            <a class="official-a" href="https://www.tiktok.com/@ps_miu1117" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>TikTok</a>
-        </li>
-    </ul>
-
-    <ul class="official-link rinka-link" style="padding-top: 0;">
-        <li>
-            <a class="official-a" href="https://lit.link/psrinka" target="_blank">
+        <li class="rinka-link">
+            <a class="official-a" href="https://lit.link/psrinka?ref=mothlamp.info" target="_blank">
                 <svg role="img" aria-label="蝶々">
                     <use href="#butterfly"></use>
                 </svg>凛花</a>
         </li>
-        <li>
-            <a class="official-a" href="https://x.com/ps_rinka0509" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>X(Twitter)</a>
-        </li>
-        <li>
-            <a class="official-a" href="https://www.instagram.com/ps_rinka0509" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>Instagram</a>
-        </li>
-        <li>
-            <a class="official-a" href="https://www.tiktok.com/@ps_rinka0509" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>TikTok</a>
-        </li>
-    </ul>
-
-    <!-- <ul class="official-link hisui-link" style="padding-top: 0;">
-        <li>
-            <a class="official-a" href="https://lit.link/pshisui" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>灯翠</a>
-        </li>
-        <li>
-            <a class="official-a" href="https://x.com/ps_hisui0501" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>X(Twitter)</a>
-        </li>
-        <li>
-            <a class="official-a" href="https://www.instagram.com/ps_hisui0501" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>Instagram</a>
-        </li>
-        <li>
-            <a class="official-a" href="https://www.tiktok.com/@ps_hisui0501" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>TikTok</a>
-        </li>
-    </ul> -->
-
-    <ul class="official-link moka-link" style="padding-top: 0;">
-        <li>
-            <a class="official-a" href="https://lit.link/psmoka" target="_blank">
+        <li class="moka-link">
+            <a class="official-a" href="https://lit.link/psmoka?ref=mothlamp.info" target="_blank">
                 <svg role="img" aria-label="蝶々">
                     <use href="#butterfly"></use>
                 </svg>百花</a>
         </li>
-        <li>
-            <a class="official-a" href="https://x.com/ps_moka1020" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>X(Twitter)</a>
-        </li>
-        <li>
-            <a class="official-a" href="https://www.instagram.com/ps_moka1020" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>Instagram</a>
-        </li>
-        <li>
-            <a class="official-a" href="https://www.tiktok.com/@ps_moka1020" target="_blank">
-                <svg role="img" aria-label="蝶々">
-                    <use href="#butterfly"></use>
-                </svg>TikTok</a>
-        </li>
     </ul>
-
 </div>
+
+
+<div class="contents_block contents_block_has_a">
+    <a class="contents_block_a" href="/?p=play.haine-test-2"></a>
+    <img src="/static/img/haine-test-2.jpg" alt="">
+    <h2>
+        <span class="word-chunk">第２回ハイネ共通テスト</span>
+    </h2>
+</div>
+
 
 <div class="contents_block contents_block_has_a phanart-link-block">
     <a class="contents_block_a" href="/?p=phanart"></a>
@@ -289,12 +193,13 @@
     </div>
     <script>
         $(document).ready(function () {
-            const apiurl = "https://script.google.com/macros/s/AKfycbzVQzDXTeXn9TbXnWo5t41PaviWk5ui7gIGGC3pKdPOE4TaSYBZvlBCS23FpDaaUhmB/exec";
+            const apiurl = "https://g-api.mothlamp.info/api";
             const target_sheet = "schedule";
             const url = apiurl + "?target=" + target_sheet;
 
             // キャッシュ保持時間（ミリ秒）
-            const CACHE_DURATION = 12 * 60 * 60 * 1000;
+            const CACHE_DURATION = 5 * 1000;
+            // const CACHE_DURATION = 12 * 60 * 60 * 1000;
             const CACHE_KEY = "schedule_cache";
             const TIMESTAMP_KEY = "schedule_cache_time";
 
@@ -570,7 +475,16 @@
                 <p>
                     <svg role="img" aria-label="蝶々">
                         <use href="#butterfly"></use>
-                    </svg>ハイネ共通テスト
+                    </svg>第1回ハイネ共通テスト(2025.04.03)
+                </p>
+            </li>
+        </a>
+        <a href="/?p=play.haine-test-2" class="link-list-a">
+            <li>
+                <p>
+                    <svg role="img" aria-label="蝶々">
+                        <use href="#butterfly"></use>
+                    </svg>第2回ハイネ共通テスト(2026.01.17)
                 </p>
             </li>
         </a>
