--- a/pages/play/haine-test-2.html
+++ b/pages/play/haine-test-2.html
@@ -90,6 +90,7 @@
 <div class="contents_block contents_block_has_a">
     <a class="contents_block_a"
         href="https://docs.google.com/forms/d/e/1FAIpQLSdL_eNgZUteXrO7XoAR1e07QxPpT_VoEwY1LvtwMD1BN8pGFQ/viewform?usp=header"></a>
+    <img src="/static/img/haine-test-2.jpg" alt="">
     <h2>
         <span class="word-chunk">第２回ハイネ共通テスト</span>
         <span class="word-chunk">問題はこちら！</span>
