--- a/pages/web.html
+++ b/pages/web.html
@@ -19,33 +19,19 @@
 
 <script>
     $(document).ready(function () {
-        const apiurl = "https://script.google.com/macros/s/AKfycbzVQzDXTeXn9TbXnWo5t41PaviWk5ui7gIGGC3pKdPOE4TaSYBZvlBCS23FpDaaUhmB/exec";
+        // 既に実行済みなら終了
+        if (window.__webArticlesLoaded) return;
+        window.__webArticlesLoaded = true;
+
+        const apiurl = "https://g-api.mothlamp.info/api";
         const target_sheet = "web-articles";
         const url = apiurl + "?target=" + target_sheet;
 
-        // キャッシュキーと有効期間（ミリ秒）→ 12時間
-        const CACHE_KEY = "web_articles_cache";
-        const TIMESTAMP_KEY = "web_articles_cache_time";
-        const CACHE_DURATION = 12 * 60 * 60 * 1000;
-
-        const cachedData = sessionStorage.getItem(CACHE_KEY);
-        const cachedTime = sessionStorage.getItem(TIMESTAMP_KEY);
-        const now = Date.now();
-
-        if (cachedData && cachedTime && (now - parseInt(cachedTime) < CACHE_DURATION)) {
-            // セッションキャッシュから取得して表示
-            const data = JSON.parse(cachedData);
+        $.getJSON(url, function (data) {
             renderArticles(data);
-        } else {
-            // APIから取得し、セッションストレージに保存
-            $.getJSON(url, function (data) {
-                sessionStorage.setItem(CACHE_KEY, JSON.stringify(data));
-                sessionStorage.setItem(TIMESTAMP_KEY, now.toString());
-                renderArticles(data);
-            });
-        }
+        });
 
-        // 記事を描画する共通関数
+        // 記事を描画する関数
         function renderArticles(data) {
             data.forEach(function (web) {
                 console.log(web);
