--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -435,6 +435,15 @@
                 </p>
             </li>
         </a>
+        <a href="/?p=play.raffle-sim" class="link-list-a">
+            <li>
+                <p>
+                    <svg role="img" aria-label="蝶々">
+                        <use href="#butterfly"></use>
+                    </svg>ランダムくじ(ガチャ)シミュレーター
+                </p>
+            </li>
+        </a>
         <a href="/?p=play.haine-test" class="link-list-a">
             <li>
                 <p>
