--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@ l105 32 120 106 c66 58 146 127 178 153 l59 47 -434 -2 c-238 -1 -458 -3 -488
             <footer>
                 <div class="footer-link">
                     <a href="/?p=about">本サイトについて</a>
-                    <a href="https://tatsu.mothlamp.info/?p=haine-profile">管理人について</a>
                     <a href="https://forms.gle/nSAq8ozNZM46TPYM7">お問い合わせ</a>
+                    <a href="https://x.com/mothlamp_info">X(Twitter)</a>
                 </div>
                 <img src="/static/logo/bottom-logo.png" alt="logo" class="bottom_logo">
             </footer>
